--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~8.1.0",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "mdbootstrap": "^4.8.7",
+    "ngx-toastr": "^10.0.4",
     "popper": "^1.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
